<resources>
    <string name="app_name">EzQuiz</string>
    <string name="dialog_add_quiz_title">Add Quiz</string>
    <string name="dialog_edit_quiz_title">Edit Quiz</string>
    <string name="btn_add">Add</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_answer">Add Answer</string>
    <string name="hint_question">Question</string>
    <string name="hint_answer">Answer</string>
    <string name="label_correct">Correct</string>
    <string name="hint_set_name">Name of this Set</string>
    <string name="hint_set_description">Description of this Set</string>
    <string name="hint_paste_id">Enter Paste ID (e.g. JpOIB)</string>
    <string name="label_flashcards">Flashcards</string>
    <string name="label_quizzes">Quizzes</string>
    <string name="btn_import_paste">Import from Paste ID</string>
    <string name="title_import_paste">Import from Paste ID</string>
    <string name="hint_dialog_paste_id">Paste ID</string>
    <string name="btn_import">Import</string>
    <string-array name="quiz_type_entries">
        <item>SINGLE</item>
        <item>MULTIPLE</item>
    </string-array>
    <string name="prompt_paste_id">Please enter a Paste ID.</string>
    <string name="error_no_items_imported">No items imported or invalid format.</string>
    <string name="imported_set_name">Imported from %1$s</string>
    <string name="imported_set_description">Imported via Paste ID: %1$s</string>
    <string name="import_success">Imported %1$d items to new set.</string>
    <string name="qr_enter_manually">Enter QR Code Manually</string>
    <string name="qr_submit">Submit</string>
    <string name="desc_summary_icon">Summary icon</string>
    <string name="summary_title">Completed!</string>
    <string name="action_study_unknown_again">Study unknown cards again</string>
    <string name="action_restart_session">Restart from beginning</string>
    <string name="action_done">Done</string>
    <string name="action_dont_know">Don\'t know</string>
    <string name="action_know">Know</string>
    <string name="review_save_quiz"><![CDATA[Review & Save Quiz]]></string>
    <string name="save_to_collection">Save to Collection:</string>
    <string name="new_set_name">New Set Name:</string>
    <string name="enter_name_for_this_new_set">Enter name for this new set</string>
    <string name="save_quiz_set">Save Quiz Set</string>
    <string name="question">Question</string>
    <string name="hint_ai_prompt">Describe your quiz topic and requirements</string>
    <string name="cd_ai_prompt">Input field for describing quiz requirements</string>
    <string name="generate_quiz">Generate Quiz</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="import_manually">Import Manually</string>
    <string name="qr_scanner_placeholder">[QR Scanner]</string>
    <string name="scan_qr_or_import_manually">Scan QR or import manually</string>
    <string name="select_collection">Select Collection</string>
    <string name="set_name_optional">Set Name (optional)</string>
    <string name="enter_set_name">Enter set name</string>
    <string name="next">Next</string>
    <string name="previous_card">Previous Card</string>
    <string name="next_card">Next Card</string>
    <string name="error_collection_id_not_found">Error: Collection ID not found</string>
    <string name="dialog_add_set_title"> More Quiz Sets  </string>
    <string name="toast_starting_test_mode">Start Test Mode for Set ID: %1$d</string>
    <string name="error_invalid_test_params">Error: Invalid test parameters.</string>
    <string name="dialog_grading_message"> Grading…</string>
    <string name="toast_no_questions_found">No matching questions were found for the selected mode(s).</string>
    <string name="test_progress_format">%1$d / %2$d</string>
    <string name="dialog_unanswered_title">Not completed</string>
    <string name="dialog_unanswered_message">You have not completed all the questions. Are you sure you want to submit?</string>
    <string name="btn_submit_anyway">Submit</string>
    <string name="btn_continue_test">Continue</string>
    <string name="dialog_close_test_title">Exit the test?</string>
    <string name="dialog_close_test_message">Your progress will not be saved. Are you sure you want to exit?</string>
    <string name="btn_exit">Exit</string>

        <string name="question_header_multiple_choice">Multiple Choice</string>
        <string name="prompt_select_multiple_answers">Choose one or more correct answers</string>
        <string name="prompt_select_one_answer">Choose one correct answer</string>
        <string name="question_header_true_false">True / False</string>
        <string name="test_question_progress_format">%1$d / %2$d</string>
    <string name="error_invalid_quiz_set_id">Error: Invalid quiz set ID.</string>
    <string name="switch_label_multiple_choice">Multiple Choice (%d)</string>
    <string name="switch_label_true_false">True/False (%d)</string>
    <string name="hint_question_count">Questions (max: %d)</string>
    <string name="toast_select_at_least_one_type">Please select at least one question type.</string>
    <string name="toast_no_questions_for_selection">There are no questions of the selected type(s).</string>
    <string name="error_invalid_question_count_range">Number of invalid questions (1 - %d)</string>
    <string name="error_invalid_question_count">Number of invalid questions.</string>

        <string name="toast_no_result_data">No result data.</string>
        <string name="test_result_score_format">%1$d/%2$d (%3$d%%)</string>
        <string name="test_result_message_excellent">You are excellent </string>
        <string name="test_result_message_good">Congratulations! You have completed the test.</string>
        <string name="test_result_message_needs_practice">You need more practice </string>
        <string name="share_result_content">I just completed the test on EzQuiz with a score of %1$d/%2$d! </string>
        <string name="share_result_title">EzQuiz Results</string>
        <string name="toast_practice_again_coming_soon"> Retry feature will be added soon!</string>
        <string name="error_cannot_find_id_for_retry">Error: ID not found for retry.</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="cd_close">Close</string>
    <string name="title_test_setup">Set up the test</string>
    <string name="placeholder_set_name">Name of the card set</string>
    <string name="hint_quantity">Quantity</string>
    <string name="chrome_extension_suggestion">Need QR codes from websites? Try our Chrome Extension</string>
    <string name="chrome_extension_url" translatable="false">https://chromewebstore.google.com/detail/quiz-qr-extractor/oeefhcndpdcphhbbadpnagbneoklkhlm</string>
    <string name="importing_please_wait">Importing, please wait…</string>
    <string name="position_qr_within_frame">Position the QR code within the frame</string>
    <string name="import_quiz">Import Quiz</string>
    <string name="title_scan_qr_code">Scan QR Code</string>
    <string name="import_content">Import Content</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_cancel">Cancel</string>
    <string name="info_leave_blank_for_all">Leave blank to get all available questions.</string>

    <!-- Test related strings -->
    <string name="label_multiple_choice">Multiple Choice</string>
    <string name="label_true_false">True/False</string>
    <string name="btn_start_test">Start Test</string>
    <string name="btn_submit_test">Submit Test</string>
    <string name="fab_next_unanswered">Next Unanswered</string>
    <string name="cd_success_icon">Success icon</string>
    <string name="label_correct_questions">Correct Questions</string>
    <string name="label_incorrect_questions">Incorrect Questions</string>
    <string name="btn_share_result">Share Result</string>
    <string name="btn_practice_again">Practice Again</string>
    <string name="btn_finish">Finish</string>
    <string name="placeholder_terminology">Terminology</string>
    <string name="prompt_choose_correct_answer">Choose the correct answer</string>
    <string name="placeholder_mc_question_content">Multiple choice question content goes here?</string>
    <string name="prompt_choose_answer">Choose an answer</string>
    <string name="placeholder_tf_question_content">The `final` keyword in Java can be applied to variables, methods, and classes.</string>
    <string name="label_suggested_answer">Suggested answer:</string>
    <string name="placeholder_random_answer">This is a randomly selected answer.</string>
    <string name="prompt_is_answer_true_or_false">Is the above statement False or True?</string>
    <string name="processing_qr_code">Processing...</string>

    <string name="error_invalid_set_id">Error: Invalid Set ID.</string>
    <string name="toast_no_quizzes_for_practice">No quizzes found for practice.</string>
    <string name="toast_restarting_session">Restarting session…</string>
    <string name="toast_studying_unknown">Studying unknown cards…</string>
    <string name="toast_no_flashcards_in_set">No flashcards found in this set.</string>
    <string name="text_tap_to_hide_answer">Tap to hide answer</string>
    <string name="toast_no_cards_to_jump_to">No cards to jump to.</string>
    <string name="dialog_title_jump_to_card">Jump to card</string>
    <string name="dialog_hint_jump_to_card">Enter card number (1 - %1$d)</string>
    <string name="dialog_btn_go">Go</string>
    <string name="toast_error_invalid_card_number">Invalid number. Please enter a value between 1 and %1$d</string>
    <string name="toast_error_invalid_input_number">Invalid input. Please enter a number.</string>

    <string name="flashcard_answer_bullet_format">• %s</string>
    <string name="flashcard_no_correct_answer_specified">No correct answer specified.</string>
    <string name="flashcard_summary_known_format">You knew %1$d / %2$d cards!</string>
    <string name="flashcard_summary_study_unknown_format">Study %d unknown cards</string>
    <string name="flashcard_summary_no_results">No results to display.</string>

    <string name="choose_the_correct_answer">Choose the correct answer</string>
    <string name="action_check">Check</string>
    <string name="action_next">Next</string>
    <string name="action_finish_practice">Finish</string>

</resources>
